--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </header>
 
   <section class="card-grid">
-    <div class="card card-aulia" onclick="location.href='profile/aulia.html'">
+    <div class="card card-aulia" onclick="location.href='profile/aula.html'">
       <img src="images/icon/aulia.png">
       <h2>Aulia Damayanti</h2>
       <P>The Bucin of The Grup</P>
@@ -76,7 +76,7 @@
       <img src="images/2.jpeg" alt="Photo 2">
     </a>
     
-    <div class="more-photos hidden album-slider">
+    <div class="more-photos hidden">
       <a href="images/4.jpeg" target="_blank">
         <img src="images/4.jpeg" alt="Photo 3">
       </a>
